maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
def testV(x:Int,y:Int):Boolean = {return (x <= getMondeLargeur() -1 && y <= getMondeHauteur() -1)} //Vérifie si les coordonnées (x,y) sont valides
^JediEscaper:2: error: expected class or object definition
def testV(x:Int,y:Int):Boolean = {return (x <= getMondeLargeur() -1 && y <= getMondeHauteur() -1)} //Vérifie si les coordonnées (x,y) sont valides
^JediEscaper:4: error: expected class or object definition
def casP(x:Int,y:Int,k:Int) { //Numérote les cases adjacentes, relance sur ces mêmes cases
^JediEscaper:44: error: expected class or object definition
def ppC(x:Int,y:Int):Direction = {
^JediEscaper:51: error: Missing closing brace `}' assumed here
  if (testV(x,y-1)) {l = getIndication(x,y-1);if (l < m) {m=l;d=Direction.NORTH}
  ^JediEscaper:52: error: Missing closing brace `}' assumed here
  return d
  ^